Fixed the folders padding issue. All folders in correct alignment now.

--- a/client/src/components/folder/folder.module.css
+++ b/client/src/components/folder/folder.module.css
@@ -1,14 +1,20 @@
 .folder {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border-radius: 0.7rem;
-  width: fit-content;
+  padding: 0.5rem;
+  width: auto;
   transition: all 0.1s ease-in-out;
 }
 
 .folder img {
   width: 7rem;
 }
-
+.folder p {
+  margin: 0;
+}
 .folder * {
   text-align: center;
 }
@@ -20,5 +26,6 @@
 .edit {
   background: rgb(0, 140, 255);
   color: white;
+  padding-inline: 0.3rem;
   border-radius: 0.5rem;
 }
